Upgrading dependencies and switching build to all rollup (#2149)
* Build

* Things

* Stuff

* Change

* More stuff

* Things

* Stuff

* Review

* Self review

* Review

* Self review

* Self review

* Self review

* Self review

* Self review

* Self review

* Updating footprint script

* Guy's feedback

* Adding support for running test-browser-watch on Windows

--- a/package.json
+++ b/package.json
@@ -13,30 +13,28 @@
     "dist"
   ],
   "devDependencies": {
-    "bluebird": "^3.5.1",
-    "construct-style-sheets-polyfill": "^2.1.0",
+    "@rollup/plugin-replace": "^2.3.1",
+    "bluebird": "^3.7.2",
+    "construct-style-sheets-polyfill": "^2.3.5",
+    "cross-env": "^7.0.2",
     "esm": "^3.2.25",
-    "mocha": "^5.2.0",
+    "mocha": "^7.1.1",
     "opn": "^6.0.0",
-    "rollup": "^0.64.1",
-    "rollup-plugin-replace": "^2.0.0",
-    "terser": "^3.8.1",
-    "whatwg-fetch": "^2.0.4"
+    "rimraf": "^3.0.2",
+    "rollup": "^2.2.0",
+    "rollup-plugin-terser": "^5.3.0",
+    "terser": "^4.6.7",
+    "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
-    "build": "npm run build:systemjs && npm run build:sjs && npm run min && npm run build:extras",
-    "build:systemjs": "rollup -c",
-    "build:sjs": "rollup -c --environment sjs",
-    "build:extras": "bash minify-extras.sh",
-    "min": "npm run min:systemjs && npm run min:sjs",
-    "min:systemjs": "cd dist && terser system.js -c passes=2 -m --source-map --comments \"/SystemJS \\d/\" -o system.min.js",
-    "min:sjs": "cd dist && terser s.js -c passes=2 -m --source-map -o s.min.js",
+    "build": "rimraf dist && rollup -c",
+    "build:dev": "rollup -c --environment dev",
     "footprint": "npm run footprint:systemjs && npm run footprint:sjs",
-    "footprint:systemjs": "terser dist/system.js -c passes=2 -m | gzip -9f | wc -c",
-    "footprint:sjs": "terser dist/s.js -c passes=2 -m | gzip -9f | wc -c",
+    "footprint:systemjs": "cat dist/system.min.js | gzip -9f | wc -c",
+    "footprint:sjs": "cat dist/s.min.js | gzip -9f | wc -c",
     "test": "mocha -b -r esm test/import-map.js test/system-core.js test/url-resolution.js && npm run test-browser",
     "test-browser": "node test/server.cjs",
-    "test-browser-watch": "WATCH_MODE=true node test/server.cjs",
+    "test-browser-watch": "cross-env WATCH_MODE=true node test/server.cjs",
     "prepublish": "npm run build"
   },
   "collective": {
