--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bluebird": "^3.7.2",
     "concurrently": "^5.1.0",
     "construct-style-sheets-polyfill": "^2.3.5",
+    "cross-env": "^7.0.2",
     "esm": "^3.2.25",
     "mocha": "^7.1.1",
     "node-fetch": "^2.6.0",
