--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "devDependencies": {
     "@rollup/plugin-replace": "^2.3.1",
+    "@jsenv/github-pull-request-filesize-impact": "^2.6.0",
     "bluebird": "^3.7.2",
     "construct-style-sheets-polyfill": "^2.3.5",
     "cross-env": "^7.0.2",
