--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "systemjs",
   "version": "6.2.6",
+  "main": "dist/system-node.cjs",
+  "exports": {
+    "node": "./dist/system-node.cjs",
+    "default": "./dist/system.min.js"
+  },
   "description": "Dynamic ES module loader",
   "repository": {
     "type": "git",
@@ -13,13 +18,17 @@
     "dist"
   ],
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-replace": "^2.3.1",
     "@jsenv/github-pull-request-filesize-impact": "^2.6.0",
     "bluebird": "^3.7.2",
+    "concurrently": "^5.1.0",
     "construct-style-sheets-polyfill": "^2.3.5",
     "cross-env": "^7.0.2",
     "esm": "^3.2.25",
     "mocha": "^7.1.1",
+    "node-fetch": "^2.6.0",
     "opn": "^6.0.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.2.0",
@@ -33,8 +42,10 @@
     "footprint": "npm run footprint:systemjs && npm run footprint:sjs",
     "footprint:systemjs": "cat dist/system.min.js | gzip -9f | wc -c",
     "footprint:sjs": "cat dist/s.min.js | gzip -9f | wc -c",
-    "test": "mocha -b -r esm test/import-map.js test/system-core.js test/url-resolution.js --file test/mocha-setup.js && npm run test-browser",
-    "test-browser": "node test/server.cjs",
+    "test": "concurrently -n w: 'npm:test:*'",
+    "test:internals": "mocha -b -r esm --file test/mocha-setup.js test/import-map.js test/system-core.js test/url-resolution.js",
+    "test:node": "mocha -b -r esm --file test/mocha-setup.js test/system-node.js",
+    "test:browser": "node test/server.cjs",
     "test-browser-watch": "cross-env WATCH_MODE=true node test/server.cjs",
     "prepublish": "npm run build"
   },
