finish up ncc build

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "build": "rimraf dist && concurrently -n w: 'yarn:build:*'",
-    "build:node": "node build-node.js",
+    "build:node": "node --experimental-modules build-node.js",
     "build:browser:prod": "rollup -c",
     "build:browser:dev": "rollup -c --environment dev",
     "footprint": "npm run footprint:systemjs && npm run footprint:sjs",
@@ -47,7 +47,7 @@
     "footprint:sjs": "cat dist/s.min.js | gzip -9f | wc -c",
     "test": "concurrently -n w: 'npm:test:*'",
     "test:internals": "mocha -b --file test/mocha-setup.js test/import-map.js test/system-core.js test/url-resolution.js",
-    "test:node": "mocha -b --file test/mocha-setup.js test/system-node.js",
+    "test:node": "NODE_OPTIONS=--experimental-modules mocha -b --file test/mocha-setup.js test/system-node.js",
     "test:browser": "node test/server.cjs",
     "test-browser-watch": "cross-env WATCH_MODE=true node test/server.cjs",
     "prepublish": "npm run build"
@@ -55,6 +55,5 @@
   "collective": {
     "type": "opencollective",
     "url": "https://opencollective.com/systemjs"
-  },
-  "dependencies": {}
+  }
 }
