--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "cross-env": "^7.0.2",
     "make-fetch-happen": "^8.0.4",
     "mocha": "^7.1.1",
-    "opn": "^6.0.0",
+    "open": "^7.0.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.2.0",
     "rollup-plugin-terser": "^5.3.0",
