--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "build:node": "node --experimental-modules build-node.js",
     "build:browser:prod": "rollup -c",
     "build:browser:dev": "rollup -c --environment dev",
-    "footprint": "npm run footprint:systemjs && npm run footprint:sjs",
+    "footprint": "concurrently -n w: 'npm:footprint:*'",
     "footprint:systemjs": "cat dist/system.min.js | gzip -9f | wc -c",
     "footprint:sjs": "cat dist/s.min.js | gzip -9f | wc -c",
     "test": "concurrently -n w: 'npm:test:*'",
