--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "cross-env": "^7.0.2",
     "make-fetch-happen": "^8.0.4",
     "mocha": "^7.1.1",
-    "opn": "^6.0.0",
+    "open": "^7.0.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.2.0",
     "rollup-plugin-terser": "^5.3.0",
@@ -42,12 +42,12 @@
     "build:node": "node --experimental-modules build-node.js",
     "build:browser:prod": "rollup -c",
     "build:browser:dev": "rollup -c --environment dev",
-    "footprint": "npm run footprint:systemjs && npm run footprint:sjs",
+    "footprint": "concurrently -n w: 'npm:footprint:*'",
     "footprint:systemjs": "cat dist/system.min.js | gzip -9f | wc -c",
     "footprint:sjs": "cat dist/s.min.js | gzip -9f | wc -c",
     "test": "concurrently -n w: 'npm:test:*'",
-    "test:internals": "NODE_OPTIONS=--experimental-modules mocha -b --file test/mocha-setup.js test/import-map.js test/system-core.js test/url-resolution.js",
-    "test:node": "NODE_OPTIONS=--experimental-modules mocha -b --file test/mocha-setup.js test/system-node.js",
+    "test:internals": "cross-env NODE_OPTIONS=--experimental-modules mocha -b --file test/mocha-setup.js test/import-map.js test/system-core.js test/url-resolution.js",
+    "test:node": "cross-env NODE_OPTIONS=--experimental-modules mocha -b --file test/mocha-setup.js test/system-node.js",
     "test:browser": "node test/server.cjs",
     "test-browser-watch": "cross-env WATCH_MODE=true node test/server.cjs",
     "prepublish": "npm run build"
