Switching to node-fetch

--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "concurrently": "^5.1.0",
     "construct-style-sheets-polyfill": "^2.3.5",
     "cross-env": "^7.0.2",
-    "make-fetch-happen": "^8.0.4",
     "mocha": "^7.1.1",
+    "node-fetch": "^2.6.0",
     "open": "^7.0.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.2.0",
