--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "concurrently": "^5.1.0",
     "construct-style-sheets-polyfill": "^2.3.5",
     "cross-env": "^7.0.2",
+    "mkdirp": "^1.0.4",
     "mocha": "^7.1.1",
     "node-fetch": "^2.6.0",
     "open": "^7.0.3",
@@ -39,7 +40,7 @@
     "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
-    "build": "rimraf dist && concurrently -n w: 'npm:build:*'",
+    "build": "rimraf dist && mkdirp dist && concurrently -n w: 'npm:build:*'",
     "build:node": "node --experimental-modules build-node.js",
     "build:browser": "rollup -c",
     "build-browser-dev": "rollup -c --environment dev",
