--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "node": "./dist/system-node.cjs",
       "default": "./dist/system.min.js"
     },
+    "./s.js": "./dist/s.min.js",
     "./dist/": "./dist/"
   },
   "description": "Dynamic ES module loader",
