--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dist"
   ],
   "devDependencies": {
-    "@jsenv/github-pull-request-filesize-impact": "^3.0.2",
+    "@jsenv/file-size-impact": "^5.1.1",
     "@rollup/plugin-json": "^4.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-replace": "^2.3.1",
