--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "git://github.com/systemjs/systemjs"
   },
   "author": "Guy Bedford",
-  "type": "module",
+  "type": "script",
   "license": "MIT",
   "files": [
     "dist"
@@ -45,7 +45,7 @@
   },
   "scripts": {
     "build": "rimraf dist && mkdirp dist && concurrently -n w: 'npm:build:*'",
-    "build:node": "node --experimental-modules build-node.js",
+    "build:node": "node --experimental-modules build-node.mjs",
     "build:browser": "rollup -c",
     "build-browser-dev": "rollup -c --environment dev",
     "footprint": "concurrently -n w: 'npm:footprint:*'",
