--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ git:
   depth: 1
 language: node_js
 node_js:
-  - node
+  # ncc doesn't work with node 17 yet
+  - 16
 env:
   global:
     - MOZ_HEADLESS=1
