ensure mocha dep

--- a/chompfile.toml
+++ b/chompfile.toml
@@ -113,10 +113,11 @@ run = 'node test/server.mjs'
 
 [[task]]
 name = 'test:internal'
+dep = 'npm:install'
 env = { NODE_OPTIONS = '--unhandled-rejections=none' }
-run = 'mocha -b test/import-map.mjs test/system-core.mjs test/url-resolution.mjs'
+run = 'mocha -b test/import-map.mjs test/system-core.mjs test/url-resolution.mwjs'
 
 [[task]]
 name = 'test:node'
-dep = 'dist/system-node.cjs'
+deps = ['dist/system-node.cjs', 'npm:install']
 run = 'mocha --timeout 5000 -b test/system-node.mjs'
