correct chomp token workflow

--- a/.github/workflows/size-impact.yml
+++ b/.github/workflows/size-impact.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v3
       - name: Setup Chomp
         uses: guybedford/chomp-action@v1
-        with:
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: npm install
       - name: Report file size impact
